--- a/templates/product/product.html
+++ b/templates/product/product.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %} product {% endblock title %}
+{% block title %} {{product.name}} {% endblock title %}
 
 {% block css %} {% static 'css/product.css' %} {% endblock css %}
 
@@ -13,49 +13,72 @@
 		<!--Section Product Image Carousel -->
 		<div class="box-carousel col-lg-5">
 			<div class="carousel mx-auto col-md-11 col-lg-12">
-				<img class="img-main" src="https://katyshop303.com/wp-content/uploads/2022/04/s-l500-4.jpg" alt="image main">
+			{% if product.product_image.all %}
+				<div class="img-zoom">
+					<img class="img-main" src="{{ product.product_image.all.first.image.url }}" alt="image product">
+				</div>
 				<img class="btn-prev" src="{% static 'img/arrow-left-solid.svg' %}" alt="button previous">
 				<img class="btn-next" src="{% static 'img/arrow-right-solid.svg' %}" alt="button next">
+			{% else %}
+				<img class="img-main" src="{% static 'img/empty-product.svg' %}" alt="image product">
+			{% endif %}
 			</div>
 			<div class="list-img-product">
-				<img class="img-secondary" src="https://katyshop303.com/wp-content/uploads/2022/04/s-l500-4.jpg" alt="image main">
-				<img class="img-secondary" src="https://katyshop303.com/wp-content/uploads/2021/09/photo_2021-09-19_21-38-34.jpg" alt="image secondary 1">
-				<img class="img-secondary" src="https://katyshop303.com/wp-content/uploads/2021/04/Truvision.jpg" alt="image secondary 2">
-				<img class="img-secondary" src="https://katyshop303.com/wp-content/uploads/2022/04/s-l500-1.jpg" alt="image secondary 3">
-				<img class="img-secondary" src="https://katyshop303.com/wp-content/uploads/2020/06/71Ep4OUzTDL._AC_SX425_.jpg" alt="image secondary 4">
+				{% for img in product.product_image.all %}
+				<img class="img-secondary" src="{{ img.image.url }}" alt="image product">
+				{% endfor %}
 			</div>
-			<div class="indicator-carousel" id="points"></div>
+			<div class="indicator-carousel" id="points">
+				{% for item in product.product_image.all %}
+				{% if forloop.first %}
+				<p class="bold">.</p>
+				{% else %}
+				<p>.</p>
+				{% endif %}
+				{% endfor %}
+			</div>
 			<div class="modal" id="modal">
 				<span class="close">&times;</span>
 				<img class="modal-content" id="img01">
 				<div class="thumbnails">
-					<img class="thumbnail" src="https://katyshop303.com/wp-content/uploads/2022/04/s-l500-4.jpg" alt="image main">
-					<img class="thumbnail" src="https://katyshop303.com/wp-content/uploads/2021/09/photo_2021-09-19_21-38-34.jpg" alt="image secondary 1">
-					<img class="thumbnail" src="https://katyshop303.com/wp-content/uploads/2021/04/Truvision.jpg" alt="image secondary 2">
-					<img class="thumbnail" src="https://katyshop303.com/wp-content/uploads/2022/04/s-l500-1.jpg" alt="image secondary 3">
-					<img class="thumbnail" src="https://katyshop303.com/wp-content/uploads/2020/06/71Ep4OUzTDL._AC_SX425_.jpg" alt="image secondary 4">
+					{% for img in product.product_image.all %}
+					<img class="thumbnail" src="{{ img.image.url }}" alt="image product">
+					{% endfor %}
 				</div>
-			</div>		  
+			</div>
 		</div>
 		<!-- Product Body -->
-		<div class="col-md-6 p-md-1">
-			<h3 class="title-product">TRUVISION GEN2 + TruWeight & Energy 30-day supply Green only</h3>
-			<h3 class="base-price"><strong>$65.97</strong></h3>
-			<p class="info-points">¡Cada vez que compres este artículo, recibirá <strong>58</strong> puntos como recompensa!</p>
+		<div class="col-md-6 p-md-1 ps-lg-3">
+			<h1 class="title-product">{{ product.name }}</h1>
+			<h3 class="base-price"><strong>${{ product.price }}</strong></h3>
+			<p class="info-points">¡Cada vez que compres este artículo, recibirá <strong>58</strong> puntos como
+				recompensa!</p>
 			<div class="product-quantity">
 				<button class="decrease-product">-</button>
-				<input type="number" class="amount-product" value="1" min="1" max="10">
+				<input type="number" class="amount-product" value="1" min="1" max="{{product.amount_stock}}">
 				<button class="increase-product">+</button>
 			</div>
-			<p class="stock-store">Quedan 14 Disponibles</p>
+			{% if product.stock == True and product.amount_stock > 0 %}
+			<p class="stock-store">Quedan {{ product.amount_stock }} Disponibles</p>
 			<a href="#" class="btn-add-cart mt-4 mb-2 btn btn-primary">Agregar al carrito</a>
-			<h6>Categoria: <strong>Herbalife</strong></h6>
+			{% elif product.stock == True %}
+			<p class="stock-store">Disponibles</p>
+			<a href="#" class="btn-add-cart mt-4 mb-2 btn btn-primary">Agregar al carrito</a>
+			{% else %}
+			<p class="out-of-stock">No Disponible</p>
+			<a href="#" class="btn-add-cart mt-4 mb-2 btn btn-secondary disabled">No disponible</a>
+			{% endif %}
+			<h6>Categoria:
+				{% for category in product.category.all %}
+				<strong>{{ category.name }},</strong>
+				{% endfor %}
+			</h6>
 		</div>
 	</div>
 	<!--Description-->
-	<div class="description my-auto">
-		<h4>Descripción</h4>
-		<textarea name="" id="" cols="30" rows="10"></textarea>
+	<div class="description col-md-11 py-4 p-md-0 px-lg-3 my-auto">
+		<h4 class="title-description text-center">Descripción</h4>
+		{{ product.description|safe }}
 	</div>
 </div>
 
