--- a/static/css/cart.css
+++ b/static/css/cart.css
@@ -165,6 +165,9 @@
         font-weight: 600;
         white-space: normal;
     }
+    .amount-product {
+        width: 2.5rem;
+    }
 }
 
 @media screen and (min-width: 768px) {
