--- a/static/css/store.css
+++ b/static/css/store.css
@@ -4,6 +4,7 @@
 .card-subtitle {
     display: inline;
     font-size: 1.25rem;
+    color: #0a0;
 }
 .page-link {
     padding: 0.5rem 0.75rem;
@@ -11,9 +12,20 @@
 }
 
 /* own classes */
+.box-store {
+    min-height: 72vh;
+}
+.title-category {
+    padding: 0.2rem 0rem;
+    background-color: #00d;
+    color: #fff;
+    text-align: center;
+}
+
 .own-card-img {
     min-width: 6.375rem;
     height: 6.375rem;
+    object-fit: contain;
 }
 .own-card-img:active {
     outline: 0.08rem solid #00f;
@@ -25,19 +37,46 @@
     font-weight: 600;
     text-decoration: none;
 }
-.link-title-product:active {
+.link-title-product:hover {
     color: #00f;
 }
-.stock-store {
+.link-title-product:active {
+    color: #00f;
+    text-decoration: underline;
+}
+.stock-store, .out-of-stock {
     display: inline;
     margin-left: 0.2rem;
     font-size: 0.8125rem;
     color: #0b0;
 }
+.out-of-stock {
+    color: #f00;
+}
 .btn-add-cart {
     padding: 0.2rem 0.4rem;
 }
 
+/* Pagination of store */
+.link-page {
+    margin: 0rem 0.15rem;
+    padding: 0.3rem 0.5rem;
+    text-decoration: none;
+    border: 0.05rem solid #00f;
+    border-radius: 0.8rem;
+    cursor: pointer;
+}
+.link-page:active {
+    background-color: #00f;
+    color: #fff;
+}
+.current-pages {
+    margin: 0rem 0.3rem;
+    padding: 0.3rem;
+    background-color: #00f;
+    color: #fff;
+    border-radius: 0.8rem;
+}
 
 @media screen and (min-width: 576px) {
     /* own classes */
@@ -72,7 +111,7 @@
     .link-title-product {
         font-size: 1.2rem;
     }
-    .stock-store {
+    .stock-store, .out-of-stock {
         font-size: 1rem;
     }
     .btn-add-cart {
