--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -25,7 +25,7 @@
 
 				{% if not user.is_anonymous %}
 				<li class="nav-item m-1">
-					<a class="nav-link" id="my-account" href="{% url 'user_app:user_profile' %}">Mi cuenta</a>
+					<a class="nav-link" id="my-account" href="{% url 'user_app:user_orders' %}">Mi cuenta</a>
 				</li>
 				{% else %}
 				<li class="nav-item m-1">
